crates/carta/tests/snapshots/golden_writer__html4__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ul>
<li><ul>
<li>inner one</li>
<li>inner two</li>
</ul></li>
<li>outer two</li>
</ul>
