crates/carta/tests/snapshots/golden_writer__html4__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><em>emph with <strong>strong</strong> inside</em> end</p>
