crates/carta/tests/snapshots/golden_writer__html4__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol class="example" style="list-style-type: decimal">
<li>first</li>
<li>second</li>
</ol>
