crates/carta/tests/snapshots/golden_writer__html4__common__ordered-lower-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol style="list-style-type: lower-alpha">
<li>one</li>
<li>two</li>
</ol>
