crates/carta/tests/snapshots/golden_writer__html4__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol style="list-style-type: decimal">
<li><p>outer</p>
<ol style="list-style-type: decimal">
<li>inner one</li>
<li>inner two</li>
</ol></li>
</ol>
