crates/carta/tests/snapshots/golden_writer__html4__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol start="5" style="list-style-type: decimal">
<li>five</li>
<li>six</li>
</ol>
