crates/carta/tests/snapshots/golden_writer__html4__common__para-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>This is a deliberately long paragraph with enough words that the
writer must wrap it across the fill column boundary at least once or
twice.</p>
