crates/carta/tests/snapshots/golden_writer__html4__common__raw-html-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<div class="x">
raw block
</div>
