crates/carta/tests/snapshots/golden_writer__html4__common__raw-html-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>text <cite>raw</cite> more</p>
