crates/carta/tests/snapshots/golden_writer__html4__common__smart-ellipsis-dashes.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>wait… an en–dash and an em—dash</p>
